--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "files.watcherExclude": {
         "**/Icon?": true
     },
-    "liveServer.settings.port": 5503
+    "liveServer.settings.port": 5503,
+    "githubPullRequests.ignoredPullRequestBranches": [
+        "master"
+    ]
 }
